--- a/vignettes/Figure-4-application.Rmd
+++ b/vignettes/Figure-4-application.Rmd
@@ -15,5 +15,57 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library(demuxSNP-paper-figures)
+library(demuxSNPpaperfigures)
 ```
+
+
+
+````{r}
+
+load("../data/sce_app.rda")
+
+````
+
+
+````{r}
+
+library(scuttle)
+df <- perCellQCMetrics(sce_app,
+                       subsets=list(Mito=grep("^MT",rownames(sce_app))),
+                       use_altexps=FALSE)
+sce_app$lib_size<-df$sum
+sce_app$percent_mito<-df$subsets_Mito_percent
+
+````
+
+
+````{r}
+library(Seurat)
+seurat_app<-as.Seurat(sce_app,data=NULL)
+seurat_app <- NormalizeData(seurat_app, assay = "HTO", normalization.method = "CLR")
+seurat_app <- HTODemux(seurat_app, assay = "HTO", positive.quantile = 0.99)
+
+table(seurat_app$hash.ID)
+
+#s2<-seurat_app[,seurat_app$nCount_RNA>1000 & seurat_app$percent_mito<10]
+#s2<-HTODemux(s2, assay= "HTO")
+#table(s2$hash.ID)
+````
+
+
+
+````{r}
+df2<-as.data.frame(df[seurat_app$hash.ID=="Negative",])
+library(ggpubr)
+plots<-ggscatterhist(df2,x="sum",y="detected", title = "Quality metrics distributions for 'Negative' group") 
+plots$sp <- plots$sp +
+    geom_hline(yintercept = 750, linetype = "dashed", color = "blue") +
+  geom_vline(xintercept = 1500, linetype = "dashed", color = "red")
+plots
+
+high_qual<-df2$sum>1500 & df2$detected>750
+
+table(high_qual)
+
+barplot(table(high_qual))
+````
