--- a/vignettes/Figure-2-hashing.Rmd
+++ b/vignettes/Figure-2-hashing.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library(demuxSNP-paper-figures)
+library(demuxSNPpaperfigures)
 library(demuxSNP)
 library(SingleCellExperiment)
 library(Seurat)
