--- a/vignettes/Figure-2-hashing.Rmd
+++ b/vignettes/Figure-2-hashing.Rmd
@@ -21,7 +21,7 @@ library(SingleCellExperiment)
 library(Seurat)
 library(demuxmix)
 ```
-
+## hashing based demultiplexing performance decreases with hashing quality:
 
 ````{r}
 
