--- a/vignettes/Figure-2-hashing.Rmd
+++ b/vignettes/Figure-2-hashing.Rmd
@@ -20,27 +20,101 @@ library(demuxSNP)
 library(SingleCellExperiment)
 library(Seurat)
 library(demuxmix)
+library(dittoSeq)
+library(ggpubr)
+library(gridExtra)
 
 ```
 
 ````{r}
 
 source("../R/hto_sim.R")
+source("../R/plot_hashtag.R")
+````
+
+## high qual 
+
+````{r fig.width=12,fig.height=3}
+
+mat<-logimat(6,nsinglet=rep(500,6), ndoub = 500, nneg=50)
+size_sig=rep(10,6)
+size_bg=rep(10,6)
+mu_sig=rep(50,6)
+mu_bg=rep(5,6)
+counts<-draw_counts(size_sig = size_sig, size_bg = size_bg, mu_sig = mu_sig, mu_bg = mu_bg, mat = mat, seed = 1)
+
+dim(counts)
+truth<-colnames(counts)
+df<-data.frame(t(counts))
+plot<-plot_hashtag(df)
+do.call(grid.arrange,c(plot,nrow=1))
+````
+
+## low qual
+
+````{r fig.width=12,fig.height=3}
+
+mat<-logimat(6,nsinglet=c(100,200,1000,400,500,800), ndoub = 500, nneg=50)
+size_sig=rep(10,6)
+size_bg=rep(20,6)
+mu_sig=rep(50,6)
+mu_bg=rep(5,6)
+counts_low<-draw_counts(size_sig = size_sig, size_bg = size_bg, mu_sig = mu_sig, mu_bg = mu_bg, mat = mat, seed = 1)
+
+dim(counts_low)
+truth<-colnames(counts_low)
+df<-data.frame(t(counts_low))
+plot<-plot_hashtag(df,ylim=c(0,2000))
+do.call(grid.arrange,c(plot,nrow=1))
+````
+
+````{r}
+
+library(cellhashR)
+colnames(counts)<-seq_len(dim(counts)[2])
+chr<-GenerateCellHashingCalls(counts,
+                              methods=c("htodemux","bff_raw","bff_cluster","dropletutils"),
+                              doTSNE = FALSE)
+
+seurat_high<-CreateSeuratObject(counts=counts,assay="HTO")
+seurat_high<-NormalizeData(seurat_high,normalization.method ="CLR")
+seurat_high<-HTODemux(seurat_high)
+
+#sce_high<-SingleCellExperiment()
+
+chr$gt<-truth
+library(caret)
+methods=c("htodemux","bff_cluster","bff_raw")
+
+for (i in seq_along(methods[1])) {
+  m<-methods[i]
+  data_ch=chr[[m]]
+  ref_ch=chr[['gt']]
+  data_fac<-factor(data_ch,union(data_ch,ref_ch))
+  ref_fac<-factor(ref_ch,union(data_ch,ref_ch))
+  cf<-confusionMatrix(data=data_fac,reference=ref_fac)
+  print(cf)
+}
+table(data_ch,ref_ch)
+
+table(chr$htodemux,seurat_high$hash.ID)
 
 ````
 
 ````{r}
 
-mat<-logimat(6,nsinglet=rep(500,6), ndoub = 500, nneg=50)
-size_sig=rep(10,4)
-size_bg=rep(10,4)
-mu_sig=rep(30,4)
-mu_bg=rep(5,4)
-counts<-draw_counts(size_sig = size_sig, size_bg = size_bg, mu_sig = mu_sig, mu_bg = mu_bg, mat = mat, seed = 1)
+set.seed(1)
+mu1<-400
+mu2<-20
+mat<-logimat(ngroups=4,nsinglet=c(2000,1000,3200,150),ndoub=1000,nneg=200)
+counts<-draw_counts(size_sig=2.5,size_bg = c(2.5,2.5,2,2.5),mu_sig = c(mu1*1.2,mu1*0.9,mu1*0.7,mu1*0.9),mu_bg = c(mu2,mu2,mu2,mu2),mat=mat,seed=1)
+hto<-SingleCellExperiment(list(counts=counts))
+colnames(counts)<-seq_len(dim(counts)[2])
+seurat<-CreateSeuratObject(counts=counts,assay="HTO")
+seurat<-NormalizeData(seurat,normalization.method ="CLR")
+seurat$hashtag<-as.factor(colnames(counts))
+seurat<-HTODemux(seurat)
 
-dim(counts)
-
-plot_hashtag
 ````
 
 ````{r}
@@ -71,9 +145,6 @@ mu_sig=c(500,500,400,500,200,400)
 mu_bg=c(110,120,90,100,60,80)
 
 counts<-draw_counts(size_sig = size_sig, size_bg = size_bg, mu_sig = mu_sig, mu_bg = mu_bg, mat = z)
-
-
-
 
 ````
 
